# bazel-minimal-rerun

./: MODULE.bazel
examples/: BUILD  rerun_example.cpp
