module(
    name = "bazel_minimal_rerun",
    repo_name = "com_github_bazel_minimal_rerun",
)

bazel_dep(name = "rules_foreign_cc", version = "0.10.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "rerun",
    build_file = "@//:third_party/rerun/build_file.bazel",
    sha256 = "3dda74c712e9a0d8f78a4aefef8963f9ee663bb098f05dcb4c1de71c1f0d423d",
    strip_prefix = "rerun_cpp_sdk",
    url = "https://github.com/rerun-io/rerun/releases/download/0.14.1/rerun_cpp_sdk.zip",
)
